Fix bug in modals on mobile

--- a/src/sass/partials/_modals.scss
+++ b/src/sass/partials/_modals.scss
@@ -36,6 +36,7 @@
       }
       .modal-content {
         max-height: 100%;
+        overflow: hidden;
       }
       .scroll-pane {
         height: calc(100vh - 170px) !important;
